--- a/doxygen docs/latex/refman.tex
+++ b/doxygen docs/latex/refman.tex
@@ -215,10 +215,14 @@
 \chapter{File Documentation}
 \input{tetris_game_8c}
 \input{tetris_game_8h_source}
+\input{tetris_leveling_8c}
+\input{tetris_leveling_8h_source}
 \input{tetris_scoring_8c}
 \input{tetris_scoring_8h_source}
 \input{tetris_start_menu_8c}
 \input{tetris_start_menu_8h_source}
+\input{user_oled_8c}
+\input{user_oled_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
