--- a/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
@@ -16,4 +16,4 @@ int {\bfseries piece} \mbox{[}4\mbox{]}\mbox{[}4\mbox{]}
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
+C\+:/\+Users/pontet/\+Desktop/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
