--- a/doxygen docs/latex/tetris_scoring_8h_source.tex
+++ b/doxygen docs/latex/tetris_scoring_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Scoring.\+h}
-\hypertarget{tetris_scoring_8h_source}{}\label{tetris_scoring_8h_source}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h}}
+\hypertarget{tetris_scoring_8h_source}{}\label{tetris_scoring_8h_source}\index{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h@{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
@@ -16,9 +16,9 @@
 \DoxyCodeLine{00012\ }
 \DoxyCodeLine{00013\ }
 \DoxyCodeLine{00014\ uint32\_t\ \mbox{\hyperlink{tetris_scoring_8c_abf4ef5f0f52581fe195737642ff99062}{getScore}}();}
-\DoxyCodeLine{00015\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_ab75449209112e9c46002f0b4f8fd8b2b}{calculateScore}}(\textcolor{keywordtype}{int});}
+\DoxyCodeLine{00015\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_ab5449638cab4d1f6a50bf72a798d2cf8}{calculateScore}}(\textcolor{keywordtype}{int});}
 \DoxyCodeLine{00016\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_a3d376a9de4a0761a7b6c55d4ffaecc16}{addScorePiece}}();}
-\DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_a3f87c79589f763313467235c321cf325}{addScoreLine}}(uint8\_t);}
+\DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_a133fc5864ff727c69ac9701c7d42750a}{addScoreLine}}(uint8\_t);}
 \DoxyCodeLine{00018\ }
 \DoxyCodeLine{00019\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_scoring_8c_a26da11a341ee07a8a79252f3464ed1d6}{printScore}}();}
 \DoxyCodeLine{00020\ }
