--- a/doxygen docs/latex/tetris_start_menu_8c.tex
+++ b/doxygen docs/latex/tetris_start_menu_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Start\+Menu.c File Reference}
-\hypertarget{tetris_start_menu_8c}{}\label{tetris_start_menu_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c}}
+\doxysection{C\+:/\+Users/pontet/\+Desktop/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Start\+Menu.c File Reference}
+\hypertarget{tetris_start_menu_8c}{}\label{tetris_start_menu_8c}\index{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c@{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.c}}
 
 
 \+: Program to draw the Menu  
