doxygen main page and date

--- a/doxygen docs/latex/annotated.tex
+++ b/doxygen docs/latex/annotated.tex
@@ -1,4 +1,4 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{struct_t_e_t_r_a_m_i_n_o___a_t_m}{TETRAMINO\+\_\+\+ATM}} }{\pageref{struct_t_e_t_r_a_m_i_n_o___a_t_m}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_t_e_t_r_a_m_i_n_o___a_t_m}{TETRAMINO\+\_\+\+ATM}} \\*Structure to locate the current tetramino in the game }{\pageref{struct_t_e_t_r_a_m_i_n_o___a_t_m}}{}
 \end{DoxyCompactList}
