--- a/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
@@ -1,5 +1,10 @@
 \doxysection{TETRAMINO\+\_\+\+ATM Struct Reference}
 \hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m}{}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m}\index{TETRAMINO\_ATM@{TETRAMINO\_ATM}}
+
+
+Structure to locate the current tetramino in the game.  
+
+
 \doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -14,6 +19,9 @@ int {\bfseries piece} \mbox{[}4\mbox{]}\mbox{[}4\mbox{]}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Detailed Description}
+Structure to locate the current tetramino in the game. 
+
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/pontet/\+Desktop/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
+C\+:/\+Users/pontet.\+APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
