--- a/doxygen docs/latex/tetris_start_menu_8h_source.tex
+++ b/doxygen docs/latex/tetris_start_menu_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Start\+Menu.\+h}
-\hypertarget{tetris_start_menu_8h_source}{}\label{tetris_start_menu_8h_source}\index{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h@{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h}}
+\hypertarget{tetris_start_menu_8h_source}{}\label{tetris_start_menu_8h_source}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisStartMenu.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
