--- a/doxygen docs/latex/refman.tex
+++ b/doxygen docs/latex/refman.tex
@@ -206,6 +206,7 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{index}
 \chapter{Class Index}
 \input{annotated}
 \chapter{File Index}
