--- a/doxygen docs/latex/tetris_leveling_8c.tex
+++ b/doxygen docs/latex/tetris_leveling_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/pontet/\+Desktop/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
-\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/pontet/Desktop/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
+\doxysection{C\+:/\+Users/pontet.APOLLO2/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Leveling.c File Reference}
+\hypertarget{tetris_leveling_8c}{}\label{tetris_leveling_8c}\index{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c@{C:/Users/pontet.APOLLO2/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisLeveling.c}}
 
 
 \+: Program for Tetris Leveling system  
@@ -24,6 +24,9 @@ int {\bfseries level\+Number} = 0
 \doxysubsection{Detailed Description}
 \+: Program for Tetris Leveling system 
 
+\begin{DoxyDate}{Date}
+08 février 2024 
+\end{DoxyDate}
 
 
 \doxysubsection{Function Documentation}
